fix: add calculated max height and overflow auto (#92)
* fix: add calculated max height and overflow auto

* fix: add flex display to flyout menu

--- a/src/core/styles/vt-flyout.css
+++ b/src/core/styles/vt-flyout.css
@@ -57,6 +57,7 @@
 }
 
 .vt-flyout-menu {
+  display: flex;
   position: absolute;
   top: calc(var(--vt-nav-height) / 2 + 15px);
   right: 0;
@@ -64,4 +65,5 @@
   visibility: hidden;
   transform: translateY(-4px);
   transition: opacity .25s, visibility .25s, transform .25s;
+  max-height: calc(100vh - var(--vt-nav-height));
 }
